z-index fix

--- a/sudoku-new/css/main.less
+++ b/sudoku-new/css/main.less
@@ -180,6 +180,7 @@ body {
 
 .backdrop {
     position: absolute;
+    z-index: -100;
     bottom: 0;
     width: 100%;
     height: 412px;
